Register native styles under 2.0 in addition to 6.0
Since we changed the logic that decides the default style, users with
QML that imports 2.x versions of QtQuick.Controls will get errors if
the default style that is chosen is a native style:

qrc:/main.qml:53:1: module "QtQuick.Controls.macOS" version 2.15 is not installed
qrc:/main.qml: Failed to load dependencies for module "QtQuick.Controls" version 2.15

We use PAST_MAJOR_VERSIONS to register the module for 2.x, and not
just 6.0, and register the types of those styles under version 2.0
in addition to 6.0. This should not cause any problems for existing
QML code.

Fixes: QTBUG-87658
Change-Id: I976078c0aea3fbebe4e04f5ba4d8056c0ca7a0e6
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/imports/nativestyle/CMakeLists.txt
+++ b/src/imports/nativestyle/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_internal_add_qml_module(qtquickcontrols2nativestyleplugin
     CLASSNAME QtQuickControls2NativeStylePlugin
     DEPENDENCIES
         QtQuick.Controls/2.5
+    PAST_MAJOR_VERSIONS 2
     GENERATE_QMLTYPES
     INSTALL_QMLTYPES
     SOURCES
@@ -61,6 +62,7 @@ qt_internal_add_qml_module(qtquickcontrols2nativestyleplugin
 # OTHER_FILES = "qmldir" "$$QML_FILES"
 # QML_IMPORT_MAJOR_VERSION = "6"
 # QML_IMPORT_NAME = "QtQuick.NativeStyle"
+# QML_PAST_MAJOR_VERSIONS = "2"
 # TARGETPATH = "QtQuick/NativeStyle"
 # _REQUIREMENTS = "qtConfig(quickcontrols2-macos)|qtConfig(quickcontrols2-windows)"
 
@@ -122,43 +124,43 @@ set(qml_files
     "controls/DefaultDial.qml"
 )
 set_source_files_properties(controls/DefaultButton.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultSlider.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultGroupBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultCheckBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultRadioButton.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultSpinBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultTextField.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultFrame.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultTextArea.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultComboBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultScrollBar.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultProgressBar.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(controls/DefaultDial.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 
 qt6_target_qml_files(qtquickcontrols2nativestyleplugin
