--- a/src/imports/controls/macos/CMakeLists.txt
+++ b/src/imports/controls/macos/CMakeLists.txt
@@ -6,10 +6,11 @@
 
 qt_internal_add_qml_module(qtquickcontrols2macosstyleplugin
     URI "QtQuick.Controls.macOS"
-    VERSION "6.0" # special case
+    VERSION "${CMAKE_PROJECT_VERSION}"
     CLASSNAME QtQuickControls2MacOSStylePlugin
     IMPORTS
         QtQuick.Controls.Fusion/auto
+    PAST_MAJOR_VERSIONS 2
     GENERATE_QMLTYPES
     INSTALL_QMLTYPES
     SOURCES
@@ -37,6 +38,7 @@ qt_internal_add_qml_module(qtquickcontrols2macosstyleplugin
 # OTHER_FILES = "qmldir" "$$QML_FILES"
 # QML_IMPORT_NAME = "QtQuick.Controls.macOS"
 # QML_IMPORT_VERSION = "$$QT_VERSION"
+# QML_PAST_MAJOR_VERSIONS = "2"
 # TARGETPATH = "QtQuick/Controls/macOS"
 # _REQUIREMENTS = "qtConfig(quickcontrols2-macos)"
 
@@ -57,46 +59,46 @@ set(qml_files
     "Dial.qml"
 )
 set_source_files_properties(Button.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Slider.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(GroupBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(CheckBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(RadioButton.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(SpinBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(TextField.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Frame.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(TextArea.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ComboBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ScrollView.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ScrollBar.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ProgressBar.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Dial.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 
 qt6_target_qml_files(qtquickcontrols2macosstyleplugin
