--- a/src/imports/controls/windows/CMakeLists.txt
+++ b/src/imports/controls/windows/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_internal_add_qml_module(qtquickcontrols2windowsstyleplugin
     CLASSNAME QtQuickControls2WindowsStylePlugin
     IMPORTS
         QtQuick.Controls.Fusion/auto
+    PAST_MAJOR_VERSIONS 2
     GENERATE_QMLTYPES
     INSTALL_QMLTYPES
     SOURCES
@@ -37,6 +38,7 @@ qt_internal_add_qml_module(qtquickcontrols2windowsstyleplugin
 # OTHER_FILES = "qmldir" "$$QML_FILES"
 # QML_IMPORT_NAME = "QtQuick.Controls.Windows"
 # QML_IMPORT_VERSION = "$$QT_VERSION"
+# QML_PAST_MAJOR_VERSIONS = "2"
 # TARGETPATH = "QtQuick/Controls/Windows"
 # _REQUIREMENTS = "qtConfig(quickcontrols2-windows)"
 
@@ -56,43 +58,43 @@ set(qml_files
     "ScrollView.qml"
 )
 set_source_files_properties(Button.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(CheckBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ComboBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Frame.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(GroupBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ProgressBar.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(RadioButton.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(Slider.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(SpinBox.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(TextArea.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(TextField.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ScrollBar.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 set_source_files_properties(ScrollView.qml PROPERTIES
-    QT_QML_SOURCE_VERSION "6.0"
+    QT_QML_SOURCE_VERSION "2.0;6.0"
 )
 
 qt6_target_qml_files(qtquickcontrols2windowsstyleplugin
