--- a/examples/quick/delegatechooser/CMakeLists.txt
+++ b/examples/quick/delegatechooser/CMakeLists.txt
@@ -20,7 +20,7 @@ find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Quick)
 find_package(Qt6 COMPONENTS Qml)
 
-add_qt_gui_executable(delegatechooser
+qt_add_executable(delegatechooser
     main.cpp
 )
 target_link_libraries(delegatechooser PUBLIC
