--- a/examples/quick/localstorage/localstorage/CMakeLists.txt
+++ b/examples/quick/localstorage/localstorage/CMakeLists.txt
@@ -20,7 +20,7 @@ find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Quick)
 find_package(Qt6 COMPONENTS Qml)
 
-add_qt_gui_executable(localstorage
+qt_add_executable(localstorage
     main.cpp
 )
 target_link_libraries(localstorage PUBLIC
