CMake: Regenerate examples to use qt_add_executable
Task-number: QTBUG-87661
Change-Id: I0d26db40fdb7bd35c92c8fd970b60ec580acc0e0
Reviewed-by: Daniel Smith <Daniel.Smith@qt.io>

--- a/examples/quickcontrols2/contactlist/CMakeLists.txt
+++ b/examples/quickcontrols2/contactlist/CMakeLists.txt
@@ -19,7 +19,7 @@ find_package(Qt6 COMPONENTS Core)
 find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Quick)
 
-add_qt_gui_executable(contactlist
+qt_add_executable(contactlist
     contactmodel.cpp contactmodel.h
     main.cpp
 )
