--- a/examples/quickcontrols2/imagine/musicplayer/CMakeLists.txt
+++ b/examples/quickcontrols2/imagine/musicplayer/CMakeLists.txt
@@ -20,7 +20,7 @@ find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Quick)
 find_package(Qt6 COMPONENTS QuickControls2)
 
-add_qt_gui_executable(musicplayer
+qt_add_executable(musicplayer
     musicplayer.cpp
 )
 target_link_libraries(musicplayer PUBLIC
