Update and activate tst_animators
Amends a0f8be4021caa9bb5055923f0eea3bee0e345235; it's not clear if
there's any reason we haven't been running this test all these years.
But we need to use testFileUrl() for loading QML files, and some
additional updates make it more like the other tests.
Regenerated CMakeLists.txt from the .pro files:
python3 ~/dev/qt6/qtbase/util/cmake/pro2cmake.py *.pro

Pick-to: 5.15
Change-Id: I3ddcc993c4536c2d4d751a37c0425943c7d86766
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>

--- a/tests/auto/quick/CMakeLists.txt
+++ b/tests/auto/quick/CMakeLists.txt
@@ -26,6 +26,7 @@ if(QT_FEATURE_private_tests)
     add_subdirectory(qquickaccessible)
     add_subdirectory(qquickanchors)
     add_subdirectory(qquickanimatedimage)
+    add_subdirectory(qquickanimators)
     add_subdirectory(qquickdynamicpropertyanimation)
     add_subdirectory(qquickborderimage)
     add_subdirectory(qquickwindow)
