--- a/tests/auto/quick/qquickanimators/CMakeLists.txt
+++ b/tests/auto/quick/qquickanimators/CMakeLists.txt
@@ -4,16 +4,44 @@
 ## tst_qquickanimators Test:
 #####################################################################
 
+# Collect test data
+file(GLOB_RECURSE test_data_glob
+    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
+    data/*)
+list(APPEND test_data ${test_data_glob})
+
 qt_internal_add_test(tst_qquickanimators
     SOURCES
+        ../../shared/util.cpp ../../shared/util.h
+        ../shared/geometrytestutil.cpp ../shared/geometrytestutil.h
+        ../shared/viewtestutil.cpp ../shared/viewtestutil.h
+        ../shared/visualtestutil.cpp ../shared/visualtestutil.h
         tst_qquickanimators.cpp
+    DEFINES
+        QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
+    INCLUDE_DIRECTORIES
+        ../../shared
     PUBLIC_LIBRARIES
         Qt::CorePrivate
         Qt::Gui
         Qt::GuiPrivate
         Qt::QmlPrivate
         Qt::QuickPrivate
+    TESTDATA ${test_data}
 )
+
+#### Keys ignored in scope 1:.:.:qquickanimators.pro:<TRUE>:
+# DISTFILES = "data/*"
 
 ## Scopes:
 #####################################################################
+
+qt_internal_extend_target(tst_qquickanimators CONDITION ANDROID OR IOS
+    DEFINES
+        QT_QMLTEST_DATADIR=\\\":/data\\\"
+)
+
+qt_internal_extend_target(tst_qquickanimators CONDITION NOT ANDROID AND NOT IOS
+    DEFINES
+        QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
+)
