CMake: Fix no-widgets build
Task-number: QTBUG-86053
Change-Id: Ia2e3c3d0164550bb77b73edb3ef8f5e634e09ea7
Reviewed-by: Cristian Adam <cristian.adam@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,8 @@ project(QtQuickControls2
 set(QT_NO_INTERNAL_COMPATIBILITY_FUNCTIONS TRUE)
 # special case end
 
-find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Widgets Network Qml Quick # special case
-                                           OPTIONAL_COMPONENTS QuickTest # special case
-)
+find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Network Qml Quick) # special case
+find_package(Qt6 ${PROJECT_VERSION} QUIET CONFIG OPTIONAL_COMPONENTS Widgets QuickTest) # special case
 if(NOT TARGET Qt::Quick)
     message(NOTICE "Skipping the build as the condition \"TARGET Qt::Quick\" is not met.")
     return()
