CMake: Regenerate examples to set the WIN32_EXECUTABLE property
As well as the MACOSX_BUNDLE properties as necessary.

Task-number: QTBUG-87664
Task-number: QTBUG-86827
Change-Id: I46769fb543acb2cbeba122470b5e44ad478fbe4e
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/examples/qml/networkaccessmanagerfactory/CMakeLists.txt
+++ b/examples/qml/networkaccessmanagerfactory/CMakeLists.txt
@@ -24,6 +24,10 @@ find_package(Qt6 COMPONENTS Network)
 qt_add_executable(networkaccessmanagerfactory
     main.cpp
 )
+set_target_properties(networkaccessmanagerfactory PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(networkaccessmanagerfactory PUBLIC
     Qt::Core
     Qt::Gui
