--- a/examples/qml/referenceexamples/adding/CMakeLists.txt
+++ b/examples/qml/referenceexamples/adding/CMakeLists.txt
@@ -22,6 +22,10 @@ qt_add_executable(adding
     main.cpp
     person.cpp person.h
 )
+set_target_properties(adding PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(adding PUBLIC
     Qt::Core
     Qt::Qml
