--- a/examples/qml/referenceexamples/attached/CMakeLists.txt
+++ b/examples/qml/referenceexamples/attached/CMakeLists.txt
@@ -24,6 +24,10 @@ qt_add_executable(attached
     main.cpp
     person.cpp person.h
 )
+set_target_properties(attached PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(attached PUBLIC
     Qt::Core
     Qt::Gui
