--- a/examples/qml/xmlhttprequest/CMakeLists.txt
+++ b/examples/qml/xmlhttprequest/CMakeLists.txt
@@ -23,6 +23,10 @@ find_package(Qt6 COMPONENTS Qml)
 qt_add_executable(xmlhttprequest
     main.cpp
 )
+set_target_properties(xmlhttprequest PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(xmlhttprequest PUBLIC
     Qt::Core
     Qt::Gui
