--- a/examples/quick/delegatechooser/CMakeLists.txt
+++ b/examples/quick/delegatechooser/CMakeLists.txt
@@ -23,6 +23,10 @@ find_package(Qt6 COMPONENTS Qml)
 qt_add_executable(delegatechooser
     main.cpp
 )
+set_target_properties(delegatechooser PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(delegatechooser PUBLIC
     Qt::Core
     Qt::Gui
