--- a/examples/quick/particles/itemparticle/CMakeLists.txt
+++ b/examples/quick/particles/itemparticle/CMakeLists.txt
@@ -23,6 +23,10 @@ find_package(Qt6 COMPONENTS Qml)
 qt_add_executable(itemparticle
     main.cpp
 )
+set_target_properties(itemparticle PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(itemparticle PUBLIC
     Qt::Core
     Qt::Gui
