--- a/examples/quick/quickwidgets/quickwidget/CMakeLists.txt
+++ b/examples/quick/quickwidgets/quickwidget/CMakeLists.txt
@@ -25,6 +25,10 @@ qt_add_executable(quickwidget
     fbitem.cpp fbitem.h
     main.cpp
 )
+set_target_properties(quickwidget PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(quickwidget PUBLIC
     Qt::Core
     Qt::Gui
