--- a/examples/quick/threading/CMakeLists.txt
+++ b/examples/quick/threading/CMakeLists.txt
@@ -23,6 +23,10 @@ find_package(Qt6 COMPONENTS Qml)
 qt_add_executable(threading
     main.cpp
 )
+set_target_properties(threading PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(threading PUBLIC
     Qt::Core
     Qt::Gui
