CMake: Regenerate examples to set the WIN32_EXECUTABLE property
As well as the MACOSX_BUNDLE properties as necessary.

Task-number: QTBUG-87664
Change-Id: I1113701f04a16b05b03fbb1a49f131c84659cdcb
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/examples/quickcontrols2/sidepanel/CMakeLists.txt
+++ b/examples/quickcontrols2/sidepanel/CMakeLists.txt
@@ -22,6 +22,10 @@ find_package(Qt6 COMPONENTS Quick)
 qt_add_executable(sidepanel
     sidepanel.cpp
 )
+set_target_properties(sidepanel PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(sidepanel PUBLIC
     Qt::Core
     Qt::Gui
