--- a/examples/quickcontrols2/imagine/automotive/CMakeLists.txt
+++ b/examples/quickcontrols2/imagine/automotive/CMakeLists.txt
@@ -23,6 +23,10 @@ find_package(Qt6 COMPONENTS QuickControls2)
 qt_add_executable(automotive
     automotive.cpp
 )
+set_target_properties(automotive PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(automotive PUBLIC
     Qt::Core
     Qt::Gui
