--- a/examples/quickcontrols2/imagine/musicplayer/CMakeLists.txt
+++ b/examples/quickcontrols2/imagine/musicplayer/CMakeLists.txt
@@ -23,6 +23,10 @@ find_package(Qt6 COMPONENTS QuickControls2)
 qt_add_executable(musicplayer
     musicplayer.cpp
 )
+set_target_properties(musicplayer PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(musicplayer PUBLIC
     Qt::Core
     Qt::Gui
