--- a/examples/quickcontrols2/swipetoremove/CMakeLists.txt
+++ b/examples/quickcontrols2/swipetoremove/CMakeLists.txt
@@ -22,6 +22,10 @@ find_package(Qt6 COMPONENTS Qml)
 qt_add_executable(swipetoremove
     swipetoremove.cpp
 )
+set_target_properties(swipetoremove PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
 target_link_libraries(swipetoremove PUBLIC
     Qt::Core
     Qt::Gui
