Add a module describing the qmltypes format
It's turtles all the way down. And now we can verify builtins.qmltypes
using qmllint.

Change-Id: I10c98ff8837c04838c3fd9803ef4ea0fd5d7bd0e
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/src/imports/CMakeLists.txt
+++ b/src/imports/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(builtins)
 add_subdirectory(qtqml)
 add_subdirectory(models)
 add_subdirectory(labsmodels)
+add_subdirectory(tooling)
 if(QT_FEATURE_qml_itemmodel)
     add_subdirectory(folderlistmodel)
 endif()
