CMake: Update usage of add_qt_gui_executable
Change-Id: I0e5eb05c60fafcf95db5e60ccbd1fee8e50da890
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/tests/manual/nativestyle/CMakeLists.txt
+++ b/tests/manual/nativestyle/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Quick)
 find_package(Qt6 COMPONENTS QuickControls2)
 
-add_qt_gui_executable(desktopgallery
+qt_add_executable(desktopgallery
     main.cpp
 )
 target_link_libraries(desktopgallery PUBLIC
