CMake: Allow building pure QML modules not backed by C++ sources
When no C++ sources are passed to qt_internal_add_qml_plugin (a pure
QML module), create a C++ backed Qt plugin anyway.

In such a case, generate a dummy plugin.cpp containing a
QQmlEngineExtensionPlugin subclass.

The class name is autogenerated from the QML import URI.
The class constructor will call the qmltyperegistrar generated
void qml_register_types_foo() function, to ensure the needed module
versions are registered for the QML module.

Change-Id: I19959dafdf0dc837c6037e7dc1d549b7420110a7
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/qml/CMakeLists.txt
+++ b/src/qml/CMakeLists.txt
@@ -668,4 +668,10 @@ qt_copy_or_install(FILES
     "${CMAKE_CURRENT_LIST_DIR}/${INSTALL_CMAKE_NAMESPACE}${target}ImportScannerTemplate.cpp.in"
     DESTINATION "${config_install_dir}"
 )
+
+# Install pure QML Plugin template cpp file.
+qt_copy_or_install(FILES
+    "${CMAKE_CURRENT_LIST_DIR}/${INSTALL_CMAKE_NAMESPACE}${target}PluginTemplate.cpp.in"
+    DESTINATION "${config_install_dir}"
+)
 # special case end
