Fix flatstyle example
Styles must now be proper QML modules; i.e. have a qmldir and be
available in the import path.

Fixes: QTBUG-87848
Change-Id: I07de491be31a24f2b07f68f389600450dc89561c
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/examples/quickcontrols2/flatstyle/CMakeLists.txt
+++ b/examples/quickcontrols2/flatstyle/CMakeLists.txt
@@ -39,11 +39,12 @@ target_link_libraries(flatstyle PUBLIC
 
 # Resources:
 set(qmake_immediate_resource_files
-    "Flat/Button.qml"
-    "Flat/CheckBox.qml"
-    "Flat/Switch.qml"
     "MainForm.ui.qml"
     "flatstyle.qml"
+    "imports/Flat/Button.qml"
+    "imports/Flat/CheckBox.qml"
+    "imports/Flat/Switch.qml"
+    "imports/Flat/qmldir"
     "imports/Theme/Theme.qml"
     "imports/Theme/qmldir"
     "qtquickcontrols2.conf"
