CMake: Fix qmltest's config module name as understood by qmake
While the library artifact is called libQt6QuickTest.so, the actual Qt
module name as understood by qmake is 'qmltest'.
Regenerate the project to add the CONFIG_MODULE_NAME.
This should make 'QT += qmltest' work now.

Fixes: QTBUG-88025
Change-Id: I5627edbcce3f0e2b297a5d6b85489c038ec90b3b
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/qmltest/CMakeLists.txt
+++ b/src/qmltest/CMakeLists.txt
@@ -5,6 +5,7 @@
 #####################################################################
 
 qt_internal_add_module(QuickTest
+    CONFIG_MODULE_NAME qmltest
     GENERATE_METATYPES
     QMAKE_MODULE_CONFIG $${QT.testlib.CONFIG}
     SOURCES
