Make text example work in static CMake builds
Task-number: QTBUG-87702
Task-number: QTBUG-86947
Change-Id: I9dd1b6ca633be60977109acf6b00123d4492b726
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/quick/text/CMakeLists.txt
+++ b/examples/quick/text/CMakeLists.txt
@@ -137,6 +137,8 @@ qt6_add_resources(text "shared"
         ${shared_resource_files}
 )
 
+qt_import_qml_plugins(text) # special case
+
 install(TARGETS text
     RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
