--- a/tests/auto/qml/qmltyperegistrar/CMakeLists.txt
+++ b/tests/auto/qml/qmltyperegistrar/CMakeLists.txt
@@ -32,6 +32,7 @@ target_compile_definitions(tst_qmltyperegistrar PRIVATE BUILD_WITH_CMAKE) # spec
 set_target_properties(tst_qmltyperegistrar PROPERTIES
     QT_QML_MODULE_VERSION 1.0
     QT_QML_MODULE_URI QmlTypeRegistrarTest
+    QT_QML_PAST_MAJOR_VERSIONS 0 # special case
     QT_QMLTYPES_FILENAME tst_qmltyperegistrar.qmltypes
 )
 
